# ssm-splitscreen-minecraft

./: AGENTS.md  Cargo.toml  README.md  ssm_minecraft.sh
instance_template/: instance.cfg  mmc-pack.json
src/: config.rs  logger.rs  main.rs  minecraft_version.rs  polymc_helper.rs  setup.rs  system.rs  window_layout.rs
