[package]
name = "ssm_splitscreen"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialog = "0"  # For graphical dialogs (like kdialog)
dirs = "6"    # For platform-specific directories
log = "0"
env_logger = "0"
chrono = "0.4.44"
fern = "0.7.1"
regex = "1"

[dev-dependencies]
rstest = "0.22"
tempfile = "3"
